@@ -13,7 +13,7 @@ subsection: icons
   <h2>List of all <abbr title="Scalable Vector Graphics">SVG</abbr> sprites (square sprites)</h2>
   
   <h3>Icons with a “native” viewbox of 16×16</h3>
-  {% assign listIcons = "account#add#address#address-add#address-disable#alias#all-emails#anniversary#apparence#archive#arrow-down#arrow-left#arrow-right#arrow-up#attach#attention#auto-reply#auto-reply2#birthday#bullet-points#close#compose#contact#contact-add#contact-photo#contacts-group-people#contacts-group#contacts-group-add#copy#dashboard#date#decrypt#delete#domain#donate#download#drafts#drag#email#email-address#empty-folder#encrypt#encrypted-contacts-book#expand#expiration#export#fax#file-doc#file-docx#file-image#file-pdf#file-pot#file-ppt#file-pptx#file-rar-zip#file-unknown#file-video#file-xliff#file-xls#file-xslx#file-xml#filter#folder#folder-label#font-color#forward#gender#help-answer#html-message#imap-smtp#import#inbox#info#insert-image#keys#label#layout-columns#layout-columns2#layout-rows#layout-rows2#link#member-contact#merge#minimize#mobile#mobile-add#more#note#note-add#notifications-disabled#notifications-enabled#off#on#ordered-list#organization#payments#phishing#phone#plaintext-message#print#protonvpn#read#reload#remove-text-formatting#reply#reply-all#report-bug#role#save#search#security#sent#settings-master#settings-singular#shop#show-all-emails#sign-out#sort-large-small#sort-new-old#sort-old-new#sort-small-large#spam#star#support1#support2#text-align-left#text-align-right#text-bold#text-center#text-font#text-italic#text-justify#text-quote#text-underline#title#trash#tutorial#tutorial2#unread#upgrade-to-paid#view-headers#view-html-code#view-source-code#what-is-this" | split: '#' %}
+  {% assign listIcons = "account#add#address#address-add#address-disable#alias#all-emails#anniversary#apparence#archive#arrow-down#arrow-left#arrow-right#arrow-up#attach#attention#auto-reply#auto-reply2#birthday#bullet-points#close#compose#contact#contact-add#contact-photo#contacts-group-people#contacts-group#contacts-group-add#copy#dashboard#date#decrypt#delete#domain#donate#download#drafts#drag#email#email-address#empty-folder#encrypt#encrypted-contacts-book#expand#expiration#export#fax#file-doc#file-docx#file-image#file-pdf#file-pot#file-ppt#file-pptx#file-rar-zip#file-unknown#file-video#file-xliff#file-xls#file-xslx#file-xml#filter#folder#folder-label#font-color#forward#gender#help-answer#html-message#imap-smtp#import#inbox#info#insert-image#keys#label#layout-columns#layout-columns2#layout-rows#layout-rows2#link#member-contact#merge#minimize#mobile#mobile-add#more#note#note-add#notifications-disabled#notifications-enabled#off#on#ordered-list#organization#payments#phishing#phone#plaintext-message#print#protonmail#protonvpn#read#reload#remove-text-formatting#reply#reply-all#report-bug#role#save#search#security#sent#settings-master#settings-singular#shop#show-all-emails#sign-out#sort-large-small#sort-new-old#sort-old-new#sort-small-large#spam#star#support1#support2#text-align-left#text-align-right#text-bold#text-center#text-font#text-italic#text-justify#text-quote#text-underline#title#trash#tutorial#tutorial2#unread#upgrade-to-paid#view-headers#view-html-code#view-source-code#what-is-this" | split: '#' %}
 
   <div class="flex mb2">
     {% for icon in listIcons %}
@@ -31,7 +31,7 @@ subsection: icons
 
   <h3>Icons with a “native” viewbox of 100×100</h3>
 
-  {% assign listIcons = "pm#twitter#clipboard" | split: '#' %}
+  {% assign listIcons = "twitter#clipboard" | split: '#' %}
 
   <div class="flex mb2">
     {% for icon in listIcons %}
