@@ -8,6 +8,7 @@
 
 - added disabled styles for `radio`/`checkbox`
 - added new color on `block-info-standard`: `block-info-standard-error`
+- added ProtonMail icon with “native” viewbox of 16×16
 
 # [1.4.4] - 2019-03-15
 
